simplify docker configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,4 @@ server.port=80
 spring.thymeleaf.cache=false
 
 # config for UserWebserviceClient
-user.webservice.url=http://host.docker.internal:8080/services
-#user.webservice.url=http://localhost:8080/services
+user.webservice.url=http://localhost:8080/services
