--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,5 @@
 spring.profiles.active=dev
-
 server.port=80
 spring.thymeleaf.cache=false
-
-# config for UserWebserviceClient
-user.webservice.url=http://localhost:8080/services
+# app specific properties
+app.user.webservice.url=http://localhost:8080/api/v/1.0
