--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,5 @@ server.port=80
 spring.thymeleaf.cache=false
 
 # app specific properties
-app.user.webservice.url=http://localhost:8080/api/v/1.0
+app.user.webservice.url=http://localhost:8080/api/1.0
 app.title=Spring Boot Web Application
